Assembler/a51.output
Terminals unused in grammar

    IE
    IP


State 138 conflicts: 1 shift/reduce
State 153 conflicts: 46 reduce/reduce
State 158 conflicts: 46 reduce/reduce
State 180 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 245 conflicts: 46 reduce/reduce
State 251 conflicts: 46 reduce/reduce
State 304 conflicts: 46 reduce/reduce


Grammar

    0 $accept: stmt_seq $end

    1 stmt_seq: stmt
    2         | stmt_seq stmt

    3 stmt: acall_stmt
    4     | add_stmt
    5     | addc_stmt
    6     | ajmp_stmt
    7     | anl_stmt
    8     | cjne_stmt
    9     | clr_stmt
   10     | cpl_stmt
   11     | da_stmt
   12     | dec_stmt
   13     | div_stmt
   14     | djnz_stmt
   15     | inc_stmt
   16     | jb_stmt
   17     | jbc_stmt
   18     | jc_stmt
   19     | jmp_stmt
   20     | jnb_stmt
   21     | jnc_stmt
   22     | jnz_stmt
   23     | jz_stmt
   24     | lcall_stmt
   25     | ljmp_stmt
   26     | mov_stmt
   27     | movc_stmt
   28     | movx_stmt
   29     | mul_stmt
   30     | nop_stmt
   31     | orl_stmt
   32     | pop_stmt
   33     | push_stmt
   34     | ret_stmt
   35     | reti_stmt
   36     | rl_stmt
   37     | rlc_stmt
   38     | rr_stmt
   39     | rrc_stmt
   40     | setb_stmt
   41     | sjmp_stmt
   42     | subb_stmt
   43     | swap_stmt
   44     | xch_stmt
   45     | xchd_stmt
   46     | xrl_stmt
   47     | label

   48 acall_stmt: ACALL IDENTIFIER

   49 add_stmt: ADD A ',' reg
   50         | ADD A ',' dir
   51         | ADD A ',' '@' ind_reg
   52         | ADD A ',' '#' NUMBER

   53 addc_stmt: ADDC A ',' reg
   54          | ADDC A ',' dir
   55          | ADDC A ',' '@' ind_reg
   56          | ADDC A ',' '#' NUMBER

   57 ajmp_stmt: AJMP IDENTIFIER

   58 anl_stmt: ANL A ',' reg
   59         | ANL A ',' dir
   60         | ANL A ',' '@' ind_reg
   61         | ANL A ',' '#' NUMBER
   62         | ANL dir ',' A
   63         | ANL dir ',' '#' NUMBER
   64         | ANL C ',' bit
   65         | ANL C ',' '/' bit

   66 cjne_stmt: CJNE A ',' dir ',' IDENTIFIER
   67          | CJNE A ',' '#' NUMBER ',' IDENTIFIER
   68          | CJNE reg ',' '#' NUMBER ',' IDENTIFIER
   69          | CJNE '@' ind_reg ',' '#' NUMBER ',' IDENTIFIER

   70 clr_stmt: CLR A
   71         | CLR C
   72         | CLR bit

   73 cpl_stmt: CPL A
   74         | CPL C
   75         | CPL bit

   76 da_stmt: DA A

   77 dec_stmt: DEC A
   78         | DEC reg
   79         | DEC dir
   80         | DEC '@' ind_reg

   81 div_stmt: DIV AB

   82 djnz_stmt: DJNZ reg ',' IDENTIFIER
   83          | DJNZ dir ',' IDENTIFIER

   84 inc_stmt: INC A
   85         | INC reg
   86         | INC dir
   87         | INC '@' ind_reg
   88         | INC DPTR

   89 jb_stmt: JB bit ',' IDENTIFIER

   90 jbc_stmt: JBC bit ',' IDENTIFIER

   91 jc_stmt: JC IDENTIFIER

   92 jmp_stmt: JMP '@' A '+' DPTR

   93 jnb_stmt: JNB bit ',' IDENTIFIER

   94 jnc_stmt: JNC IDENTIFIER

   95 jnz_stmt: JNZ IDENTIFIER

   96 jz_stmt: JZ IDENTIFIER

   97 lcall_stmt: LCALL IDENTIFIER
   98           | LCALL NUMBER

   99 ljmp_stmt: LJMP IDENTIFIER
  100          | LJMP NUMBER

  101 mov_stmt: MOV A ',' reg
  102         | MOV A ',' dir
  103         | MOV A ',' '@' ind_reg
  104         | MOV A ',' '#' NUMBER
  105         | MOV reg ',' A
  106         | MOV reg ',' dir
  107         | MOV reg ',' '#' NUMBER
  108         | MOV dir ',' A
  109         | MOV dir ',' reg
  110         | MOV dir ',' dir
  111         | MOV dir ',' '@' ind_reg
  112         | MOV dir ',' '#' NUMBER
  113         | MOV '@' ind_reg ',' A
  114         | MOV '@' ind_reg ',' dir
  115         | MOV '@' ind_reg ',' '#' NUMBER
  116         | MOV C ',' bit
  117         | MOV bit ',' C
  118         | MOV DPTR ',' '#' NUMBER

  119 movc_stmt: MOVC A ',' '@' A '+' DPTR
  120          | MOVC A ',' '@' A '+' PC

  121 movx_stmt: MOVX A ',' '@' ind_reg
  122          | MOVX A ',' '@' DPTR
  123          | MOVX '@' ind_reg ',' A
  124          | MOVX '@' DPTR ',' A

  125 mul_stmt: MUL AB

  126 nop_stmt: NOP

  127 orl_stmt: ORL A ',' reg
  128         | ORL A ',' dir
  129         | ORL A ',' '@' ind_reg
  130         | ORL A ',' '#' NUMBER
  131         | ORL dir ',' A
  132         | ORL dir ',' '#' NUMBER
  133         | ORL C ',' bit
  134         | ORL C ',' '/' bit

  135 pop_stmt: POP dir

  136 push_stmt: PUSH dir

  137 ret_stmt: RET

  138 reti_stmt: RETI

  139 rl_stmt: RL A

  140 rlc_stmt: RLC A

  141 rr_stmt: RR A

  142 rrc_stmt: RRC A

  143 setb_stmt: SETB C
  144          | SETB bit

  145 sjmp_stmt: SJMP IDENTIFIER

  146 subb_stmt: SUBB A ',' reg
  147          | SUBB A ',' dir
  148          | SUBB A ',' '@' ind_reg
  149          | SUBB A ',' '#' NUMBER

  150 swap_stmt: SWAP A

  151 xch_stmt: XCH A ',' reg
  152         | XCH A ',' dir
  153         | XCH A ',' '@' ind_reg

  154 xchd_stmt: XCHD A ',' '@' ind_reg

  155 xrl_stmt: XRL A ',' reg
  156         | XRL A ',' dir
  157         | XRL A ',' '@' ind_reg
  158         | XRL A ',' '#' NUMBER
  159         | XRL dir ',' A
  160         | XRL dir ',' '#' NUMBER

  161 label: IDENTIFIER ':'

  162 dir: A
  163    | B
  164    | PSW
  165    | DPL
  166    | DPH
  167    | SP
  168    | P0
  169    | P1
  170    | TCON
  171    | TMOD
  172    | TLO
  173    | TL1
  174    | TH0
  175    | TH1
  176    | SCON
  177    | SBUF
  178    | NUMBER

  179 bit: ε

  180 reg: R0
  181    | R1
  182    | R2
  183    | R3
  184    | R4
  185    | R5
  186    | R6
  187    | R7

  188 ind_reg: R0
  189        | R1


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 52 56 61 63 67 68 69 104 107 112 115 118 130 132 149 158 160
    '+' (43) 92 119 120
    ',' (44) 49 50 51 52 53 54 55 56 58 59 60 61 62 63 64 65 66 67 68 69 82 83 89 90 93 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 127 128 129 130 131 132 133 134 146 147 148 149 151 152 153 154 155 156 157 158 159 160
    '/' (47) 65 134
    ':' (58) 161
    '@' (64) 51 55 60 69 80 87 92 103 111 113 114 115 119 120 121 122 123 124 129 148 153 154 157
    error (256)
    NOP (258) 126
    AJMP (259) 57
    LJMP (260) 99 100
    SJMP (261) 145
    ACALL (262) 48
    LCALL (263) 97 98
    RET (264) 137
    RETI (265) 138
    JMP (266) 92
    CJNE (267) 66 67 68 69
    DJNZ (268) 82 83
    JC (269) 91
    JNC (270) 94
    JZ (271) 96
    JNZ (272) 95
    JB (273) 89
    JBC (274) 90
    JNB (275) 93
    MOV (276) 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
    MOVC (277) 119 120
    MOVX (278) 121 122 123 124
    XCH (279) 151 152 153
    XCHD (280) 154
    SWAP (281) 150
    PUSH (282) 136
    POP (283) 135
    INC (284) 84 85 86 87 88
    DEC (285) 77 78 79 80
    ADD (286) 49 50 51 52
    ADDC (287) 53 54 55 56
    DIV (288) 81
    SUBB (289) 146 147 148 149
    MUL (290) 125
    DA (291) 76
    SETB (292) 143 144
    CLR (293) 70 71 72
    CPL (294) 73 74 75
    RR (295) 141
    RRC (296) 142
    RL (297) 139
    RLC (298) 140
    ORL (299) 127 128 129 130 131 132 133 134
    XRL (300) 155 156 157 158 159 160
    ANL (301) 58 59 60 61 62 63 64 65
    A (302) 49 50 51 52 53 54 55 56 58 59 60 61 62 66 67 70 73 76 77 84 92 101 102 103 104 105 108 113 119 120 121 122 123 124 127 128 129 130 131 139 140 141 142 146 147 148 149 150 151 152 153 154 155 156 157 158 159 162
    B (303) 163
    PSW (304) 164
    DPTR (305) 88 92 118 119 122 124
    DPL (306) 165
    DPH (307) 166
    SP (308) 167
    P0 (309) 168
    P1 (310) 169
    TCON (311) 170
    TMOD (312) 171
    TLO (313) 172
    TL1 (314) 173
    TH0 (315) 174
    TH1 (316) 175
    SCON (317) 176
    SBUF (318) 177
    PC (319) 120
    IE (320)
    IP (321)
    R0 (322) 180 188
    R1 (323) 181 189
    R2 (324) 182
    R3 (325) 183
    R4 (326) 184
    R5 (327) 185
    R6 (328) 186
    R7 (329) 187
    C (330) 64 65 71 74 116 117 133 134 143
    NUMBER (331) 52 56 61 63 67 68 69 98 100 104 107 112 115 118 130 132 149 158 160 178
    IDENTIFIER (332) 48 57 66 67 68 69 82 83 89 90 91 93 94 95 96 97 99 145 161
    AB (333) 81 125


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    stmt_seq (86)
        on left: 1 2
        on right: 0 2
    stmt (87)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 1 2
    acall_stmt (88)
        on left: 48
        on right: 3
    add_stmt (89)
        on left: 49 50 51 52
        on right: 4
    addc_stmt (90)
        on left: 53 54 55 56
        on right: 5
    ajmp_stmt (91)
        on left: 57
        on right: 6
    anl_stmt (92)
        on left: 58 59 60 61 62 63 64 65
        on right: 7
    cjne_stmt (93)
        on left: 66 67 68 69
        on right: 8
    clr_stmt (94)
        on left: 70 71 72
        on right: 9
    cpl_stmt (95)
        on left: 73 74 75
        on right: 10
    da_stmt (96)
        on left: 76
        on right: 11
    dec_stmt (97)
        on left: 77 78 79 80
        on right: 12
    div_stmt (98)
        on left: 81
        on right: 13
    djnz_stmt (99)
        on left: 82 83
        on right: 14
    inc_stmt (100)
        on left: 84 85 86 87 88
        on right: 15
    jb_stmt (101)
        on left: 89
        on right: 16
    jbc_stmt (102)
        on left: 90
        on right: 17
    jc_stmt (103)
        on left: 91
        on right: 18
    jmp_stmt (104)
        on left: 92
        on right: 19
    jnb_stmt (105)
        on left: 93
        on right: 20
    jnc_stmt (106)
        on left: 94
        on right: 21
    jnz_stmt (107)
        on left: 95
        on right: 22
    jz_stmt (108)
        on left: 96
        on right: 23
    lcall_stmt (109)
        on left: 97 98
        on right: 24
    ljmp_stmt (110)
        on left: 99 100
        on right: 25
    mov_stmt (111)
        on left: 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118
        on right: 26
    movc_stmt (112)
        on left: 119 120
        on right: 27
    movx_stmt (113)
        on left: 121 122 123 124
        on right: 28
    mul_stmt (114)
        on left: 125
        on right: 29
    nop_stmt (115)
        on left: 126
        on right: 30
    orl_stmt (116)
        on left: 127 128 129 130 131 132 133 134
        on right: 31
    pop_stmt (117)
        on left: 135
        on right: 32
    push_stmt (118)
        on left: 136
        on right: 33
    ret_stmt (119)
        on left: 137
        on right: 34
    reti_stmt (120)
        on left: 138
        on right: 35
    rl_stmt (121)
        on left: 139
        on right: 36
    rlc_stmt (122)
        on left: 140
        on right: 37
    rr_stmt (123)
        on left: 141
        on right: 38
    rrc_stmt (124)
        on left: 142
        on right: 39
    setb_stmt (125)
        on left: 143 144
        on right: 40
    sjmp_stmt (126)
        on left: 145
        on right: 41
    subb_stmt (127)
        on left: 146 147 148 149
        on right: 42
    swap_stmt (128)
        on left: 150
        on right: 43
    xch_stmt (129)
        on left: 151 152 153
        on right: 44
    xchd_stmt (130)
        on left: 154
        on right: 45
    xrl_stmt (131)
        on left: 155 156 157 158 159 160
        on right: 46
    label (132)
        on left: 161
        on right: 47
    dir (133)
        on left: 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178
        on right: 50 54 59 62 63 66 79 83 86 102 106 108 109 110 111 112 114 128 131 132 135 136 147 152 156 159 160
    bit (134)
        on left: 179
        on right: 64 65 72 75 89 90 93 116 117 133 134 144
    reg (135)
        on left: 180 181 182 183 184 185 186 187
        on right: 49 53 58 68 78 82 85 101 105 106 107 109 127 146 151 155
    ind_reg (136)
        on left: 188 189
        on right: 51 55 60 69 80 87 103 111 113 114 115 121 123 129 148 153 154 157


State 0

    0 $accept: • stmt_seq $end

    NOP         shift, and go to state 1
    AJMP        shift, and go to state 2
    LJMP        shift, and go to state 3
    SJMP        shift, and go to state 4
    ACALL       shift, and go to state 5
    LCALL       shift, and go to state 6
    RET         shift, and go to state 7
    RETI        shift, and go to state 8
    JMP         shift, and go to state 9
    CJNE        shift, and go to state 10
    DJNZ        shift, and go to state 11
    JC          shift, and go to state 12
    JNC         shift, and go to state 13
    JZ          shift, and go to state 14
    JNZ         shift, and go to state 15
    JB          shift, and go to state 16
    JBC         shift, and go to state 17
    JNB         shift, and go to state 18
    MOV         shift, and go to state 19
    MOVC        shift, and go to state 20
    MOVX        shift, and go to state 21
    XCH         shift, and go to state 22
    XCHD        shift, and go to state 23
    SWAP        shift, and go to state 24
    PUSH        shift, and go to state 25
    POP         shift, and go to state 26
    INC         shift, and go to state 27
    DEC         shift, and go to state 28
    ADD         shift, and go to state 29
    ADDC        shift, and go to state 30
    DIV         shift, and go to state 31
    SUBB        shift, and go to state 32
    MUL         shift, and go to state 33
    DA          shift, and go to state 34
    SETB        shift, and go to state 35
    CLR         shift, and go to state 36
    CPL         shift, and go to state 37
    RR          shift, and go to state 38
    RRC         shift, and go to state 39
    RL          shift, and go to state 40
    RLC         shift, and go to state 41
    ORL         shift, and go to state 42
    XRL         shift, and go to state 43
    ANL         shift, and go to state 44
    IDENTIFIER  shift, and go to state 45

    stmt_seq    go to state 46
    stmt        go to state 47
    acall_stmt  go to state 48
    add_stmt    go to state 49
    addc_stmt   go to state 50
    ajmp_stmt   go to state 51
    anl_stmt    go to state 52
    cjne_stmt   go to state 53
    clr_stmt    go to state 54
    cpl_stmt    go to state 55
    da_stmt     go to state 56
    dec_stmt    go to state 57
    div_stmt    go to state 58
    djnz_stmt   go to state 59
    inc_stmt    go to state 60
    jb_stmt     go to state 61
    jbc_stmt    go to state 62
    jc_stmt     go to state 63
    jmp_stmt    go to state 64
    jnb_stmt    go to state 65
    jnc_stmt    go to state 66
    jnz_stmt    go to state 67
    jz_stmt     go to state 68
    lcall_stmt  go to state 69
    ljmp_stmt   go to state 70
    mov_stmt    go to state 71
    movc_stmt   go to state 72
    movx_stmt   go to state 73
    mul_stmt    go to state 74
    nop_stmt    go to state 75
    orl_stmt    go to state 76
    pop_stmt    go to state 77
    push_stmt   go to state 78
    ret_stmt    go to state 79
    reti_stmt   go to state 80
    rl_stmt     go to state 81
    rlc_stmt    go to state 82
    rr_stmt     go to state 83
    rrc_stmt    go to state 84
    setb_stmt   go to state 85
    sjmp_stmt   go to state 86
    subb_stmt   go to state 87
    swap_stmt   go to state 88
    xch_stmt    go to state 89
    xchd_stmt   go to state 90
    xrl_stmt    go to state 91
    label       go to state 92


State 1

  126 nop_stmt: NOP •

    $default  reduce using rule 126 (nop_stmt)


State 2

   57 ajmp_stmt: AJMP • IDENTIFIER

    IDENTIFIER  shift, and go to state 93


State 3

   99 ljmp_stmt: LJMP • IDENTIFIER
  100          | LJMP • NUMBER

    NUMBER      shift, and go to state 94
    IDENTIFIER  shift, and go to state 95


State 4

  145 sjmp_stmt: SJMP • IDENTIFIER

    IDENTIFIER  shift, and go to state 96


State 5

   48 acall_stmt: ACALL • IDENTIFIER

    IDENTIFIER  shift, and go to state 97


State 6

   97 lcall_stmt: LCALL • IDENTIFIER
   98           | LCALL • NUMBER

    NUMBER      shift, and go to state 98
    IDENTIFIER  shift, and go to state 99


State 7

  137 ret_stmt: RET •

    $default  reduce using rule 137 (ret_stmt)


State 8

  138 reti_stmt: RETI •

    $default  reduce using rule 138 (reti_stmt)


State 9

   92 jmp_stmt: JMP • '@' A '+' DPTR

    '@'  shift, and go to state 100


State 10

   66 cjne_stmt: CJNE • A ',' dir ',' IDENTIFIER
   67          | CJNE • A ',' '#' NUMBER ',' IDENTIFIER
   68          | CJNE • reg ',' '#' NUMBER ',' IDENTIFIER
   69          | CJNE • '@' ind_reg ',' '#' NUMBER ',' IDENTIFIER

    A    shift, and go to state 101
    R0   shift, and go to state 102
    R1   shift, and go to state 103
    R2   shift, and go to state 104
    R3   shift, and go to state 105
    R4   shift, and go to state 106
    R5   shift, and go to state 107
    R6   shift, and go to state 108
    R7   shift, and go to state 109
    '@'  shift, and go to state 110

    reg  go to state 111


State 11

   82 djnz_stmt: DJNZ • reg ',' IDENTIFIER
   83          | DJNZ • dir ',' IDENTIFIER

    A       shift, and go to state 112
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    R0      shift, and go to state 102
    R1      shift, and go to state 103
    R2      shift, and go to state 104
    R3      shift, and go to state 105
    R4      shift, and go to state 106
    R5      shift, and go to state 107
    R6      shift, and go to state 108
    R7      shift, and go to state 109
    NUMBER  shift, and go to state 128

    dir  go to state 129
    reg  go to state 130


State 12

   91 jc_stmt: JC • IDENTIFIER

    IDENTIFIER  shift, and go to state 131


State 13

   94 jnc_stmt: JNC • IDENTIFIER

    IDENTIFIER  shift, and go to state 132


State 14

   96 jz_stmt: JZ • IDENTIFIER

    IDENTIFIER  shift, and go to state 133


State 15

   95 jnz_stmt: JNZ • IDENTIFIER

    IDENTIFIER  shift, and go to state 134


State 16

   89 jb_stmt: JB • bit ',' IDENTIFIER

    $default  reduce using rule 179 (bit)

    bit  go to state 135


State 17

   90 jbc_stmt: JBC • bit ',' IDENTIFIER

    $default  reduce using rule 179 (bit)

    bit  go to state 136


State 18

   93 jnb_stmt: JNB • bit ',' IDENTIFIER

    $default  reduce using rule 179 (bit)

    bit  go to state 137


State 19

  101 mov_stmt: MOV • A ',' reg
  102         | MOV • A ',' dir
  103         | MOV • A ',' '@' ind_reg
  104         | MOV • A ',' '#' NUMBER
  105         | MOV • reg ',' A
  106         | MOV • reg ',' dir
  107         | MOV • reg ',' '#' NUMBER
  108         | MOV • dir ',' A
  109         | MOV • dir ',' reg
  110         | MOV • dir ',' dir
  111         | MOV • dir ',' '@' ind_reg
  112         | MOV • dir ',' '#' NUMBER
  113         | MOV • '@' ind_reg ',' A
  114         | MOV • '@' ind_reg ',' dir
  115         | MOV • '@' ind_reg ',' '#' NUMBER
  116         | MOV • C ',' bit
  117         | MOV • bit ',' C
  118         | MOV • DPTR ',' '#' NUMBER

    A       shift, and go to state 138
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPTR    shift, and go to state 139
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    R0      shift, and go to state 102
    R1      shift, and go to state 103
    R2      shift, and go to state 104
    R3      shift, and go to state 105
    R4      shift, and go to state 106
    R5      shift, and go to state 107
    R6      shift, and go to state 108
    R7      shift, and go to state 109
    C       shift, and go to state 140
    NUMBER  shift, and go to state 128
    '@'     shift, and go to state 141

    $default  reduce using rule 179 (bit)

    dir  go to state 142
    bit  go to state 143
    reg  go to state 144


State 20

  119 movc_stmt: MOVC • A ',' '@' A '+' DPTR
  120          | MOVC • A ',' '@' A '+' PC

    A  shift, and go to state 145


State 21

  121 movx_stmt: MOVX • A ',' '@' ind_reg
  122          | MOVX • A ',' '@' DPTR
  123          | MOVX • '@' ind_reg ',' A
  124          | MOVX • '@' DPTR ',' A

    A    shift, and go to state 146
    '@'  shift, and go to state 147


State 22

  151 xch_stmt: XCH • A ',' reg
  152         | XCH • A ',' dir
  153         | XCH • A ',' '@' ind_reg

    A  shift, and go to state 148


State 23

  154 xchd_stmt: XCHD • A ',' '@' ind_reg

    A  shift, and go to state 149


State 24

  150 swap_stmt: SWAP • A

    A  shift, and go to state 150


State 25

  136 push_stmt: PUSH • dir

    A       shift, and go to state 112
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    NUMBER  shift, and go to state 128

    dir  go to state 151


State 26

  135 pop_stmt: POP • dir

    A       shift, and go to state 112
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    NUMBER  shift, and go to state 128

    dir  go to state 152


State 27

   84 inc_stmt: INC • A
   85         | INC • reg
   86         | INC • dir
   87         | INC • '@' ind_reg
   88         | INC • DPTR

    A       shift, and go to state 153
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPTR    shift, and go to state 154
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    R0      shift, and go to state 102
    R1      shift, and go to state 103
    R2      shift, and go to state 104
    R3      shift, and go to state 105
    R4      shift, and go to state 106
    R5      shift, and go to state 107
    R6      shift, and go to state 108
    R7      shift, and go to state 109
    NUMBER  shift, and go to state 128
    '@'     shift, and go to state 155

    dir  go to state 156
    reg  go to state 157


State 28

   77 dec_stmt: DEC • A
   78         | DEC • reg
   79         | DEC • dir
   80         | DEC • '@' ind_reg

    A       shift, and go to state 158
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    R0      shift, and go to state 102
    R1      shift, and go to state 103
    R2      shift, and go to state 104
    R3      shift, and go to state 105
    R4      shift, and go to state 106
    R5      shift, and go to state 107
    R6      shift, and go to state 108
    R7      shift, and go to state 109
    NUMBER  shift, and go to state 128
    '@'     shift, and go to state 159

    dir  go to state 160
    reg  go to state 161


State 29

   49 add_stmt: ADD • A ',' reg
   50         | ADD • A ',' dir
   51         | ADD • A ',' '@' ind_reg
   52         | ADD • A ',' '#' NUMBER

    A  shift, and go to state 162


State 30

   53 addc_stmt: ADDC • A ',' reg
   54          | ADDC • A ',' dir
   55          | ADDC • A ',' '@' ind_reg
   56          | ADDC • A ',' '#' NUMBER

    A  shift, and go to state 163


State 31

   81 div_stmt: DIV • AB

    AB  shift, and go to state 164


State 32

  146 subb_stmt: SUBB • A ',' reg
  147          | SUBB • A ',' dir
  148          | SUBB • A ',' '@' ind_reg
  149          | SUBB • A ',' '#' NUMBER

    A  shift, and go to state 165


State 33

  125 mul_stmt: MUL • AB

    AB  shift, and go to state 166


State 34

   76 da_stmt: DA • A

    A  shift, and go to state 167


State 35

  143 setb_stmt: SETB • C
  144          | SETB • bit

    C  shift, and go to state 168

    $default  reduce using rule 179 (bit)

    bit  go to state 169


State 36

   70 clr_stmt: CLR • A
   71         | CLR • C
   72         | CLR • bit

    A  shift, and go to state 170
    C  shift, and go to state 171

    $default  reduce using rule 179 (bit)

    bit  go to state 172


State 37

   73 cpl_stmt: CPL • A
   74         | CPL • C
   75         | CPL • bit

    A  shift, and go to state 173
    C  shift, and go to state 174

    $default  reduce using rule 179 (bit)

    bit  go to state 175


State 38

  141 rr_stmt: RR • A

    A  shift, and go to state 176


State 39

  142 rrc_stmt: RRC • A

    A  shift, and go to state 177


State 40

  139 rl_stmt: RL • A

    A  shift, and go to state 178


State 41

  140 rlc_stmt: RLC • A

    A  shift, and go to state 179


State 42

  127 orl_stmt: ORL • A ',' reg
  128         | ORL • A ',' dir
  129         | ORL • A ',' '@' ind_reg
  130         | ORL • A ',' '#' NUMBER
  131         | ORL • dir ',' A
  132         | ORL • dir ',' '#' NUMBER
  133         | ORL • C ',' bit
  134         | ORL • C ',' '/' bit

    A       shift, and go to state 180
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    C       shift, and go to state 181
    NUMBER  shift, and go to state 128

    dir  go to state 182


State 43

  155 xrl_stmt: XRL • A ',' reg
  156         | XRL • A ',' dir
  157         | XRL • A ',' '@' ind_reg
  158         | XRL • A ',' '#' NUMBER
  159         | XRL • dir ',' A
  160         | XRL • dir ',' '#' NUMBER

    A       shift, and go to state 183
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    NUMBER  shift, and go to state 128

    dir  go to state 184


State 44

   58 anl_stmt: ANL • A ',' reg
   59         | ANL • A ',' dir
   60         | ANL • A ',' '@' ind_reg
   61         | ANL • A ',' '#' NUMBER
   62         | ANL • dir ',' A
   63         | ANL • dir ',' '#' NUMBER
   64         | ANL • C ',' bit
   65         | ANL • C ',' '/' bit

    A       shift, and go to state 185
    B       shift, and go to state 113
    PSW     shift, and go to state 114
    DPL     shift, and go to state 115
    DPH     shift, and go to state 116
    SP      shift, and go to state 117
    P0      shift, and go to state 118
    P1      shift, and go to state 119
    TCON    shift, and go to state 120
    TMOD    shift, and go to state 121
    TLO     shift, and go to state 122
    TL1     shift, and go to state 123
    TH0     shift, and go to state 124
    TH1     shift, and go to state 125
    SCON    shift, and go to state 126
    SBUF    shift, and go to state 127
    C       shift, and go to state 186
    NUMBER  shift, and go to state 128

    dir  go to state 187


State 45

  161 label: IDENTIFIER • ':'

    ':'  shift, and go to state 188


State 46

    0 $accept: stmt_seq • $end
    2 stmt_seq: stmt_seq • stmt
